--- a/Source/Web/TheCodeBookProject.Web.App/Content/Site.css
+++ b/Source/Web/TheCodeBookProject.Web.App/Content/Site.css
@@ -1,4 +1,8 @@
-﻿body {
+﻿div:empty {
+    display: none;
+}
+
+body {
     padding-top: 70px;
 }
 
@@ -225,4 +229,26 @@ footer {
 
 input, textarea {
     max-width: 300px !important;
+}
+
+#NavigationMenu {
+    float: left;
+}
+
+    #NavigationMenu ul li ul {
+        display: none;
+    }
+
+    #NavigationMenu ul li {
+        position: relative;
+        float: left;
+        list-style: none;
+    }
+
+ul.nav.navbar-nav.navbar-right {
+    float: right !important;
+}
+
+#NavigationMenu ul.level1 {
+    display:inline !important;
 }
