--- a/Source/Web/TheCodeBookProject.Web.App/Content/Site.css
+++ b/Source/Web/TheCodeBookProject.Web.App/Content/Site.css
@@ -258,3 +258,5 @@ ul.nav.navbar-nav.navbar-right {
 .material-icons.md-30 { font-size: 30px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
+.material-icons.md-60 { font-size: 60px; }
+.material-icons.md-72 { font-size: 72px; }
