--- a/Source/Web/TheCodeBookProject.Web.App/Content/Site.css
+++ b/Source/Web/TheCodeBookProject.Web.App/Content/Site.css
@@ -4,6 +4,7 @@
 
 body {
     padding-top: 70px;
+    padding-bottom: 30px;
 }
 
 #banner {
@@ -55,21 +56,6 @@ body {
 .progress {
     margin-bottom: 10px;
 }
-
-footer {
-    margin: 5em 0;
-}
-
-    footer li {
-        float: left;
-        margin-right: 1.5em;
-        margin-bottom: 1.5em;
-    }
-
-    footer p {
-        clear: left;
-        margin-bottom: 0;
-    }
 
 .splash {
     padding: 4em 0 0;
@@ -250,13 +236,33 @@ ul.nav.navbar-nav.navbar-right {
 }
 
 #NavigationMenu ul.level1 {
-    display:inline !important;
+    display: inline !important;
 }
 
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-30 { font-size: 30px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-48 { font-size: 48px; }
-.material-icons.md-60 { font-size: 60px; }
-.material-icons.md-72 { font-size: 72px; }
+.material-icons.md-18 {
+    font-size: 18px;
+}
+
+.material-icons.md-24 {
+    font-size: 24px;
+}
+
+.material-icons.md-30 {
+    font-size: 30px;
+}
+
+.material-icons.md-36 {
+    font-size: 36px;
+}
+
+.material-icons.md-48 {
+    font-size: 48px;
+}
+
+.material-icons.md-60 {
+    font-size: 60px;
+}
+
+.material-icons.md-72 {
+    font-size: 72px;
+}
