--- a/Source/Web/TheCodeBookProject.Web.App/Site.Master
+++ b/Source/Web/TheCodeBookProject.Web.App/Site.Master
@@ -141,10 +141,10 @@
             .removeAttr('border')
             .removeAttr('cell-spacing');
 
-        $("#MainContent_UsersGridView table td")
+        $("table table td")
             .addClass('btn btn-default btn-raised btn-sm');
 
-        $("#MainContent_UsersGridView table td a")
+        $("table table td a")
             .css({
                 textDecoration: "none"
             });
