--- a/Source/Web/TheCodeBookProject.Web.App/Content/Site.css
+++ b/Source/Web/TheCodeBookProject.Web.App/Content/Site.css
@@ -352,3 +352,10 @@ td {
     vertical-align: middle !important;
     text-align: center;
 }
+
+#socialLoginList button[value="Facebook"] {
+    background-image: url('../Images/fb-login.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    color: transparent;
+}
